syntax = "proto3";
package pb;

message Wechat {
    int64  id = 1;
    string name = 2;
    string appid = 3;
    string appsecret = 4;
    string encodingAesKey = 5;
    string Token = 6;
    string flag = 7;
    int32  Type = 8;
    bool   Pass = 9;
    bool   SaveInput = 10;
    bool   NeedSaveMen = 11;
    int64  createdAt = 12;
    int64  updatedAt = 13;
}

message WechatList {
    int64 index = 1;
    int64 limit = 2;
    int64 total = 3;
    repeated Wechat wechats = 4;
}